Fix pipeline box overflow with scroll (#348)

--- a/ui/src/main/js/view/templates/pipeline-staged.less
+++ b/ui/src/main/js/view/templates/pipeline-staged.less
@@ -129,6 +129,7 @@
       display: inline-block;
       border: 1px solid #ccc;
       border: 1px solid var(--panel-border-color);
+      width: 100%;
       overflow-x: auto;
       overflow-y: hidden;
       box-shadow: rgba(0, 0, 0, .25) 1px 3px 5px;
